--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-preset-env": "^9.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "sass": "^1.66.1",
     "tailwindcss": "^3.3.3"
   },
